--- a/src/Client/CognitiveServicesSample.Client/CognitiveServicesSample.Client.csproj
+++ b/src/Client/CognitiveServicesSample.Client/CognitiveServicesSample.Client.csproj
@@ -36,7 +36,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Consts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="Services\ICategoryService.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="project.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Commons\CognitiveServicesSample.Commons\CognitiveServicesSample.Commons.csproj">
+      <Project>{c4f7a4e4-fe6e-4ce1-a94e-d908311f9bf5}</Project>
+      <Name>CognitiveServicesSample.Commons</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!--<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />-->
