--- a/src/Client/CognitiveServicesSample.Client/CognitiveServicesSample.Client.csproj
+++ b/src/Client/CognitiveServicesSample.Client/CognitiveServicesSample.Client.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Behaviors\NoSelectedListViewBehavior.cs" />
     <Compile Include="Consts.cs" />
+    <Compile Include="Controls\IncrementalLoadingListView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\ICategoryService.cs" />
