--- a/src/Client/CognitiveServicesSample.Client.UWP/project.json
+++ b/src/Client/CognitiveServicesSample.Client.UWP/project.json
@@ -7,7 +7,7 @@
     "Prism.Core": "6.3.0",
     "Prism.Forms": "6.3.0",
     "System.ValueTuple": "4.3.1",
-    "Xamarin.Forms": "2.3.5.239-pre3"
+    "Xamarin.Forms": "2.3.4.247"
   },
   "frameworks": {
     "uap10.0": {}
