--- a/src/Client/CognitiveServicesSample.Client/project.json
+++ b/src/Client/CognitiveServicesSample.Client/project.json
@@ -3,11 +3,11 @@
   "dependencies": {
     "Autofac": "4.6.0",
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
-    "NETStandard.Library": "1.6.0",
+    "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1",
     "Prism.Autofac.Forms": "6.3.0",
     "System.ValueTuple": "4.3.1",
-    "Xamarin.Forms": "2.3.5.239-pre3"
+    "Xamarin.Forms": "2.3.4.247"
   },
   "frameworks": {
     "netstandard1.4": {
