--- a/src/Client/CognitiveServicesSample.Client.Droid/packages.config
+++ b/src/Client/CognitiveServicesSample.Client.Droid/packages.config
@@ -69,5 +69,7 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.5" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading" version="2.2.9" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.9" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid71" />
 </packages>
