--- a/src/Client/CognitiveServicesSample.Client.iOS/packages.config
+++ b/src/Client/CognitiveServicesSample.Client.iOS/packages.config
@@ -52,5 +52,8 @@
   <package id="System.ValueTuple" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="WebP.Touch" version="1.0.3" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.2.9" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.9" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
 </packages>
