--- a/src/Client/CognitiveServicesSample.Client/project.json
+++ b/src/Client/CognitiveServicesSample.Client/project.json
@@ -7,6 +7,7 @@
     "Newtonsoft.Json": "9.0.1",
     "Prism.Autofac.Forms": "6.3.0",
     "System.ValueTuple": "4.3.1",
+    "Xamarin.FFImageLoading.Forms": "2.2.9",
     "Xamarin.Forms": "2.3.4.247"
   },
   "frameworks": {
